--- a/public/styles/bar.css
+++ b/public/styles/bar.css
@@ -16,11 +16,11 @@ body {
 	border-bottom: solid 2px var(--border);
 	display: flex;
 	align-items: center;
-	justify-content: flex-end;
+	justify-content: space-between;
 	box-shadow: 2px 6px 10px rgba(0, 0, 0, 0.5);
 }
 
-h1 {
+#alerts h1 {
 	font-family: 'Anton';
 	font-size: 3.5rem;
 	line-height: 1em;
@@ -30,20 +30,58 @@ h1 {
 	text-transform: uppercase;
 }
 
-h1 span {
+#alerts h1 span {
 	color: var(--highlight);
 }
 
-p {
+#alerts p {
 	font-family: 'Poppins';
 	font-size: 1.35rem;
 	color: var(--text);
 	margin: 0 0 0 0;
 }
 
-h1, p {
+#alerts h1, p {
 	text-align: right;
 }
+
+#icons {
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+}
+
+#icons .list {
+	display: flex;
+	flex-direction: row;
+	gap: 2rem;
+}
+
+#icons .icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 4rem;
+  width: 4rem;
+  position: relative;
+}
+
+#icons .icon.active {
+	background-color: red;
+}
+
+#icons img {
+  height: 2.5rem;
+}
+#icons .list p {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-family: Arial;
+  padding:0;
+  margin:0;
+}
+
 
 .v-enter-from,
 .v-leave-to {
