--- a/src/web/styles/_global.css
+++ b/src/web/styles/_global.css
@@ -33,6 +33,7 @@
 	--brand-youtube: #e52d27;
 	--brand-instagram: #bc2a8d;
 
+	--transparent-deep-black: rgba(0, 0, 0, 0.9);
 	--transparent-black: rgba(0, 0, 0, 0.8);
 	--transparent-white: rgba(255, 255, 255, 0.85);
 
