--- a/src/web/styles/announce.css
+++ b/src/web/styles/announce.css
@@ -22,6 +22,7 @@ body {
 	flex-direction: column;
 	justify-content: flex-end;
 	gap: .4rem;
+	z-index: 20;
 }
 
 h1 {
@@ -39,12 +40,13 @@ a {
 	color: var(--neonpink);
 }
 
-svg {
+svg{
 	width: 960px;
 	height: 300px;
 	position: absolute;
 	bottom: 0;
 	transform-origin: bottom;
+	z-index: 10;
 }
 
 .bgPolygon {
@@ -62,13 +64,14 @@ svg {
 	filter: blur(1px);
 }
 
-.gradient {
+.gradient > div {
 	width: 100%;
 	height: 100%;
 	border-radius: 50%;
 	background: conic-gradient(from 270deg, var(--neonpink) 1%, var(--neonblue) 49%, var(--neonblue) 51%, var(--neonpink) 99%);
-	animation: colorRotate 7.5s 0.5s infinite linear;
+	animation: colorRotate2 7.5s 0.5s infinite linear;
 }
+
 
 @keyframes colorRotate {
 	from { transform: rotate(270deg); }
