--- a/src/web/styles/alerts.css
+++ b/src/web/styles/alerts.css
@@ -125,7 +125,10 @@
 		-0.2rem 0.1rem 1rem var(--gift-green), 0.2rem 0.1rem 1rem var(--gift-green),
 		0 -0.5rem 2rem var(--gift-green-darker), 0 0.5rem 3rem var(--gift-green-dark);
 	animation: shinegreen 2s forwards, flicker 3s infinite;
-	z-index: 50;
+	margin-top: -90px;
+	margin-left: unset;
+	z-index: 100;
+	position: absolute;
 }
 
 .sign.green .flicker {
@@ -286,7 +289,7 @@
     text-shadow: none;
   }
   100% {
-    color: var(--gift-green-darker);
+    color: var(--gift-green);
     text-shadow: 0 0 0.6rem var(--gift-green-darker), 0 0 1.5rem var(--gift-green-dark),
       -0.2rem 0.1rem 1rem var(--gift-green), 0.2rem 0.1rem 1rem var(--gift-green),
       0 -0.5rem 2rem var(--gift-green-dark), 0 0.5rem 3rem var(--gift-green-dark);
