--- a/src/web/styles/_global.css
+++ b/src/web/styles/_global.css
@@ -51,6 +51,7 @@
 
 	--gradient: linear-gradient(90deg, var(--neonpink) 0%, var(--neonblue) 100%);
 	--gradient-silver: linear-gradient(90deg, var(--gray) 0%, var(--white) 100%);
+  --gradient-fade-in-out: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 10%, rgba(0,0,0,1) 90%, rgba(0,0,0,0) 100%);
 }
 
 /* Images */
